Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54848

Problem with QAbstractItemDelegate and IME (chinese Input Method) with edit trigger QAbstractItemView::AnyKeyPressed

XMLWordPrintable

    • macOS
    • 79f62380f09988949bc601060ff5131cf34de872 (qt/qtbase/dev) 8f8f1933f859392308002912de0470a28b9d06e3 (qt/qtbase/6.2)

      The QInputMethodEvent flow is not fired correctly when using a chinese Input Method on a QTableWidget, having QTableWidget::setEditTriggers(QAbstractItemView::AnyKeyPressed)

      1) Setup a chinese keyboard (i.e: pinyin)
      2) Launch the annexed project (stardelegate example)
      3) Select a text cell
      4) write the chinese ideogram "chang"

      Expected result: 长
      Actual result: c行 -> c + "hang"

        1. Fix-QTBUG54848-Qt5.6.patch
          10 kB
          Sebastian Sauer
        2. qtbug54848_repro.diff
          0.7 kB
          Friedemann Kleint
        3. qtbug54848.zip
          2 kB
          Friedemann Kleint
        4. stardelegate.zip
          14 kB
          user-4909d
        For Gerrit Dashboard: QTBUG-54848
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            jirauser38076 user-4909d (Inactive)
            Votes:
            3 Vote for this issue
            Watchers:
            15 Start watching this issue

              Created:
              Updated:
              Resolved: